--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.517b95f9.js"></script>
-    <link rel="stylesheet" href="/assets/index.551c2912.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    
-  </body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>ttest</title><script defer="defer" src="/js/chunk-vendors.da79aef0.js"></script><script defer="defer" src="/js/app.e51f9917.js"></script><link href="/css/chunk-vendors.3272d059.css" rel="stylesheet"><link href="/css/app.3d8c9176.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but ttest doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
